--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
     <div class="response" id="response">
         <h1>Yay! I love you! ❤️</h1>
-        <img src="https://raw.githubusercontent.com/Anni0703/valentine/refs/heads/main/image.jpeg">
+        <img src="https://raw.githubusercontent.com/Anni0703/valentine/refs/heads/main/image.jpeg" alt="Valentine Image">
         <div class="love-letter">
             <p>My dearest love,</p>
             <p>You the cutest gulluu mullu kuchu puchu cutie patotie ever.With you I feel the happiest.You make me feel special. Happy Valentine's Day! 💖</p>
